# bosch-shc-camera-client

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  quality.yml
src/bosch_shc_camera_client/: __init__.py  auth_utils.py  cloud.py  local_rcp.py  rcp.py  smb.py
tests/: test_auth_utils.py  test_cloud.py  test_import.py  test_local_rcp.py  test_rcp.py
