[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bosch-shc-camera-client"
version = "0.1.0"
description = "Async Python client library for Bosch Smart Home Camera cloud + local (RCP) APIs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "defusedxml>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/mosandlt/bosch-shc-camera-client"
Repository = "https://github.com/mosandlt/bosch-shc-camera-client"

[tool.hatch.build.targets.wheel]
packages = ["src/bosch_shc_camera_client"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
strict = true
