[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bosch-shc-camera-client"
version = "0.5.2"
description = "Async Python client library for Bosch Smart Home Camera cloud + local (RCP) APIs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "defusedxml>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/mosandlt/bosch-shc-camera-client"
Repository = "https://github.com/mosandlt/bosch-shc-camera-client"

[tool.hatch.build.targets.wheel]
packages = ["src/bosch_shc_camera_client"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
show_error_codes = true

[[tool.mypy.overrides]]
# `cryptography` is an optional, lazily-imported dependency (see rcp.py's
# `_parse_tls_cert`, guarded by try/except ImportError) — not in
# [project.dependencies]. Pin mypy's view of it as untyped/Any regardless of
# whether it happens to be installed in the checking venv, so the gate is
# deterministic across environments (mirrors the source HA repo's identical
# override for the same lazy-import pattern).
module = "cryptography.*"
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S", "C90", "RUF"]
ignore = [
    "E501",   # line length is enforced by the formatter, not the linter
    "C901",   # complexity is reported via mccabe below, not hard-failed inline
    "S101",   # asserts are deliberate mypy type-narrowing invariants — required for mypy --strict
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "F401", "F811", "F841"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["bosch_shc_camera_client"]

[tool.pylint.MASTER]
persistent = false
jobs = 2

[tool.pylint.REPORTS]
score = false

[tool.pylint."MESSAGES CONTROL"]
enable = ["use-symbolic-message-instead"]
disable = [
    # ruff already enforces these — avoid duplicate CI noise
    "format",
    "wrong-import-order",
    "line-too-long",
    "unused-import",
    "unused-variable",
    # mypy already enforces these
    "import-error",
    "no-member",
    # project conventions (mirrors Bosch-Smart-Home-Camera-Tool-HomeAssistant's pyproject.toml)
    "missing-class-docstring",     # typing enforced by mypy --strict; docstrings optional
    "missing-function-docstring",  # same
    "too-few-public-methods",      # small helpers are intentional
    # complexity metrics — ported wire-protocol code carries its source repo's
    # existing shape (verified byte-parity), not re-split just to satisfy a
    # default threshold; same disables as the source repo's pyproject.toml
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-many-branches",
    "too-many-locals",
    "too-many-instance-attributes",  # RcpCameraData mirrors 12 independent RCP reads
    "too-many-boolean-expressions",  # RCP clock field validation checks 6 ranges at once
    "too-many-statements",  # fetch_rcp_camera_data sequentially reads 12 RCP commands
    # rcp.py: RCP protocol layer, ported byte-for-byte from the source repo —
    # same disables as that repo's pyproject.toml for these exact patterns.
    "broad-exception-caught",  # parsers/protocol readers catch broadly to survive malformed data
    "import-outside-toplevel",  # optional `cryptography` dependency, imported lazily
    "unused-argument",  # get_cached_rcp_session's inner _get() matches a shared call signature
]

[tool.coverage.run]
branch = true
